Fixed header menu item hover effect and scrollbar part 2

--- a/wp-content/themes/wp-rock/src/scss/parts/_global.scss
+++ b/wp-content/themes/wp-rock/src/scss/parts/_global.scss
@@ -1,6 +1,5 @@
-html,
-body {
-    scrollbar-gutter: stable both-edges;
+html {
+    scrollbar-gutter: stable;
 }
 
 body {
